Fix cross-browser triple bond rendering issues

--- a/chemistry.css
+++ b/chemistry.css
@@ -54,126 +54,37 @@ hr{
 
 
 hr[triplebond]{
-    border-top: 2px black solid;
-    border-bottom: 2px black solid;
+    border: none;
     padding-bottom:0px !important;
     padding-top:3px !important;
     line-height: 0px;
     height:2px !important;
-
+    position: relative;
+    background: black;
+    box-shadow: 0 -4px 0 0 black, 0 4px 0 0 black;
 }
 
 
-div + hr[triplebond]::before{
-    content: '_________';
-    border-bottom: 2px !important;
-    position:absolute;
-    font-weight:900;
-    font-size:22px;
-    margin-left:-3px;
-    top:-14.5px;
-    bottom:20px;
-    width:100%;
 
-}
 
-div + hr + hr[triplebond]::before{
-    content: '______';
-    border-bottom: 2px !important;
-    position:absolute;
-    font-weight:900;
-    font-size:23.5px;
-    margin-left:-3px;
-    top:-14.5px;
-    bottom:20px;
-    width:100%;
 
-}
-
-div + hr + hr + hr[triplebond]::before{
-    content: '_________';
-    border-bottom: 2px !important;
-    position:absolute;
-    font-weight:900;
-    font-size:22px;
-    margin-left:-3px;
-    top:-14.5px;
-    bottom:20px;
-    width:100%;
-}
-
-div + hr + hr + hr + hr[triplebond]::before{
-    content: '_____';
-    border-bottom: 2px !important;
-    position:absolute;
-    font-weight:900;
-    font-size:21px;
-    margin-left:-3px;
-    top:-14.5px;
-    bottom:20px;
-    width:100%;
-}
 
 hr[partialtriplebond]{
-    border-top: 2px black solid;
-    border-bottom: 2px black dotted;
+    border: none;
     padding-bottom:0px !important;
     padding-top:3px !important;
     line-height: 0px;
     height:2px !important;
-
+    position: relative;
+    background: black;
+    box-shadow: 0 -4px 0 0 black;
+    border-bottom: 2px dotted black;
 }
 
 
-div + hr[partialtriplebond]::before{
-    content: '_________';
-    border-bottom: 2px !important;
-    position:absolute;
-    font-weight:900;
-    font-size:22px;
-    margin-left:-3px;
-    top:-14.5px;
-    bottom:20px;
-    width:100%;
 
-}
 
-div + hr + hr[partialtriplebond]::before{
-    content: '______';
-    border-bottom: 2px !important;
-    position:absolute;
-    font-weight:900;
-    font-size:23.5px;
-    margin-left:-3px;
-    top:-14.5px;
-    bottom:20px;
-    width:100%;
 
-}
-
-div + hr + hr + hr[partialtriplebond]::before{
-    content: '_________';
-    border-bottom: 2px !important;
-    position:absolute;
-    font-weight:900;
-    font-size:22px;
-    margin-left:-3px;
-    top:-14.5px;
-    bottom:20px;
-    width:100%;
-}
-
-div + hr + hr + hr + hr[partialtriplebond]::before{
-    content: '_____';
-    border-bottom: 2px !important;
-    position:absolute;
-    font-weight:900;
-    font-size:21px;
-    margin-left:-3px;
-    top:-14.5px;
-    bottom:20px;
-    width:100%;
-}
 
 
 
